# update-spec0-dependencies

./: action.yaml  pyproject.toml  readme.md  run_spec0_update.py
.github/: dependabot.yml
.github/workflows/: test_bench.yml
tests/: test_parsing.py  test_update_pyproject_toml.py  test_versions.py
tests/test_data/: pyproject.toml  pyproject_updated.toml
update_spec0_dependencies/: __init__.py
