[project]
authors         = [{ name = "Sam Vente" }]
name            = "update-spec0-dependencies"
description     = "Python code to update the lower bounds of Scientific Python libraries according to SPEC 0"
requires-python = ">= 3.11"
version         = "1.0.0"
dependencies    = ["packaging>=25.0,<26"]

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.pixi.workspace]
channels  = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
update-spec0-dependencies = { path = ".", editable = true }
tomlkit                   = ">=0.13.3,<0.14"

[tool.pixi.tasks]
update-dependencies = { cmd = ["python", "run_spec0_update.py"] }

[tool.pixi.feature.test.tasks]
test = { cmd = ["pytest", "-vvv"] }

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.environments]
test = ["test"]
